full-moon/tests/roblox_cases/fail/parser/param-types/source.lua
-- Not allowed tuples or `...type` in params
function foo(test: (number, number))
end

function bar(test: ...number)
end